...
"backup.cloud.name.error.already_exist" = "Backup name already exists!";
"backup.cloud.name.placeholder" = "Name";

"backup.cloud.password.title" = "Set Password";
"backup.cloud.password.description" = "Set the unlock password for your backup. It must consist of at least 8 symbols and include at least one lowercase letter, uppercase letter, number, and a special character.";
"backup.cloud.password.highlighted_description" = "Don't forget this password! It is separate from your Apple iCloud password, and it cannot be recovered or reset.";
"backup.cloud.password.placeholder" = "Password";
"backup.cloud.password.confirm.placeholder" = "Confirm";
"backup.cloud.password.save" = "Save and Backup";

"backup.cloud.password.error.empty_passphrase" = "Password cannot be empty";
"backup.cloud.password.error.forbidden_symbols" = "Please use only supported symbols: A-Z a-z 0-9 ' \" ` & / ? ! : ; . , ~ * $ = + - [ ] ( ) { } < > \\ _ # @ | %";
"backup.cloud.password.error.minimum_requirement" = "At least 8 characters, including one uppercase letter, one lowercase letter, one number, and one symbol";
...
"send.title.shield" = "Shield %@";
"send.send" = "Send";
"send.no_assets" = "You have no assets to send.";
"send.amount_placeholder" = "Amount";
"send.address_placeholder" = "Address";
"send.address_or_domain_placeholder" = "Address or Domain";
"send.fee" = "Fee";
"send.network_fee" = "Fee";
"send.estimated_fee" = "Estimated Fee";
"send.max_fee" = "Max Fee";
"send.max_fee.info" = "The maximum fee a user may pay to send a transaction on the network.";
"send.duration.hours" = "%d h.";
"send.duration.minutes" = "%d min.";
...
"swap.unlock.description" = "Grant permission to a smart contract for token trading on your behalf, specifying the allowed amount. No impact on your balance, but incurs a small fee for approval.\n\nPre-approving a higher amount for future trades is cost-effective compared to on-demand approvals.";
"swap.unlock.unlimited" = "Unlimited";

"swap.price_impact" = "Price Impact";
"swap.price_impact.description" = "The expected price deviation from a shown price, typically increases with the swap amount.";
"swap.high_price_impact" = "High Price Impact";
"swap.recipient" = "Recipient";
"swap.slippage" = "Slippage";

"swap.affiliate_fee" = "Affiliate Fee";
"swap.liquidity_fee" = "Liquidity Fee";
"swap.outbound_fee" = "Outbound Fee";
"swap.total_fee" = "Total Fee";
...

// Monero

"monero.priority" = "Send Priority";
"monero.priority.default" = "Default";
"monero.priority.low" = "Low";
"monero.priority.medium" = "Medium";
"monero.priority.high" = "High";
"monero.priority.last" = "Last";

// MEV Protection

"mev_protection.title" = "MEV Protection";
...
